--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "node-sass": "^6.0.0",
+    "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "vue": "^2.6.11"
   },
