--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "core-js": "^3.6.5",
     "node-sass": "^6.0.0",
     "sass": "^1.35.1",
-    "sass-loader": "^12.1.0",
-    "vue": "^2.6.11"
+    "sass-loader": "^10.1.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
