--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "vue-cli-service serve"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "node-sass": "^6.0.0",
     "sass": "^1.35.1",
